{
    "name": "TopDownPlayerController",
    "maps": [
        {
            "name": "Movement",
            "id": "aacf29f4-101a-45eb-82d1-ec3185cada5d",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "64a4b826-a0df-4796-a02f-c0fd821e81b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "b0db1480-ad88-42f6-984d-d1c7835804c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "8c43a121-4f04-48f7-9758-5a099792a9d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb0f0d16-4f63-44c0-bdc2-a457430ea3cd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42de8168-2408-4d07-8da3-6d3056109e4e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1258f89c-f770-487a-b36c-47b868155837",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "350ebd15-3fda-4bd3-a8d5-666385455a76",
            "actions": [
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "4a68c889-d594-426e-b38f-00716d09aaf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a7ea6f6-7014-4367-8e17-876f3d951606",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}